test/test_suite/errors/error_decl_ok.c3
module errors;

error TheError
{
    int a;
}

error TheError2
{
    char a;
    char b;
}

error TheError3
{
    void *a;
}

error OtherError;

